--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
         <artifactId>maven-war-plugin</artifactId>
         <configuration>
           <failOnMissingWebXml>false</failOnMissingWebXml>
+          <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
     </plugins>
