--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <name>Spring MVC Sample</name>
   <properties>
     <org.springframework-version>4.2.6.RELEASE</org.springframework-version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
@@ -82,10 +83,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.6.2</version>
         <configuration>
-          <encoding>UTF-8</encoding>
           <source>1.8</source>
           <target>1.8</target>
-          
         </configuration>
       </plugin>
       <plugin>
